# litter

./: .gitignore  AGENTS.md  Makefile  README.md
.codex/environments/: environment.toml
.github/workflows/: android-apk-release.yml  android-play-release.yml  ios-app-store-release.yml  ios-testflight.yml  mobile-ci.yml  mobile-release.yml
.local/sccache/: r2.env  r2.mk
apps/android/: README.md  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/core/bridge/: build.gradle.kts
apps/android/docs/: qa-matrix.md
apps/android/fastlane/: Fastfile  Screengrabfile
apps/android/scripts/: play-upload.sh  run-remote-debug.sh
apps/ios/: Snapfile  project.yml
apps/ios/Litter.xcodeproj/: project.pbxproj
apps/ios/Litter.xcodeproj/xcshareddata/xcschemes/: Litter.xcscheme
apps/ios/Sources/Litter/: Extensions.swift  Info.plist  Litter.entitlements  LitterApp.swift
apps/ios/Sources/Litter/Bridge/: AppSpecificTypes.swift  CodexProtocol.swift  DynamicTools.swift  MessageContentBridge.swift  RustVoiceHandoff.swift  codex_bridge_objc.h
apps/ios/Sources/Litter/CarPlay/: CarPlaySceneDelegate.swift  CarPlayVoiceManager.swift
apps/ios/Sources/Litter/Models/: AgentLabelFormatter.swift  AppLifecycleController.swift  AppModel.swift  AppRpcParams.swift  AppRuntimeController.swift  AppServerHealth+UI.swift  AppServerSnapshot+UI.swift  AppThreadSnapshot+Runtime.swift  ChatGPTOAuth.swift  ChatTypes.swift  ConnectionTarget.swift  ConversationAttachmentSupport.swift  ConversationItem.swift  ConversationStatistics.swift  CrossServerTools.swift  DiscoveredServer.swift  GenerativeUITools.swift  LLog.swift  NetworkDiscovery.swift  NetworkMonitor.swift  OpenAIApiKeyStore.swift  PushProxyClient.swift  SSHSessionManager.swift  SavedServer.swift  SavedServerStore.swift  ServerConnection.swift  ServerManager.swift  SshSessionStore.swift  StableSafeAreaInsets.swift  ThemeManager.swift  ThreadState.swift  TipJarStore.swift  TurnLiveActivityController.swift  VideoWallpaperProcessor.swift  VoiceRuntimeController.swift  VoiceSessionAudioCodec.swift  VoiceSessionControl.swift  VoiceSessionCoordinator.swift  VoiceSessionModels.swift  VoiceTranscriptionManager.swift  (+1 more)
apps/ios/Sources/LitterLiveActivity/: CodexTurnLiveActivity.swift
apps/ios/Tests/CodexIOSUITests/: CodexIOSUITests.swift
apps/ios/Tests/LitterTests/: ChatGPTOAuthTests.swift  ConversationAttachmentSupportTests.swift  ConversationPlanSemanticsTests.swift  HomeDashboardSupportTests.swift  NetworkDiscoveryTests.swift  PerformanceHelpersTests.swift  RealtimeConversationProtocolTests.swift  ToolCallMessageParserTests.swift
apps/ios/Tests/LitterUITests/: LitterUITests.swift
apps/ios/fastlane/: Fastfile  README.md  Snapfile
apps/ios/scripts/: app-store-release.sh  build-rust.sh  regenerate-project.sh  sync-codex.sh  testflight-upload.sh
docs/ios/: quickstart.md
docs/releases/: testflight-whats-new.md
patches/codex/: android-vendored-openssl.patch  client-controlled-handoff.patch  ios-exec-hook.patch  mobile-code-mode-stub.patch  mobile-shell-snapshot-timeout.patch
services/push-proxy/: wrangler.toml
services/push-proxy/src/: apns.ts  durable-object.ts  index.ts  types.ts
services/website/: wrangler.toml
services/website/public/: 404.html  android-beta.html  index.html  privacy.html  style.css  support.html  terms.html
shared/rust-bridge/: Cargo.toml  generate-bindings.sh
shared/rust-bridge/codegen/: Cargo.toml
shared/rust-bridge/codegen/src/: main.rs
shared/rust-bridge/codex-bridge/: Cargo.toml
shared/rust-bridge/codex-bridge/include/: codex_bridge.h  codex_mobile_clientFFI.h  codex_mobile_clientFFI.modulemap
shared/rust-bridge/codex-bridge/src/: android_jni.rs  lib.rs  voice_handoff.rs
shared/rust-bridge/codex-ios-audio/: Cargo.toml
shared/rust-bridge/codex-ios-audio/src/: lib.rs
shared/rust-bridge/codex-ipc/: Cargo.toml
shared/rust-bridge/codex-ipc/src/: bridge.rs  error.rs  handler.rs  lib.rs
shared/rust-bridge/codex-ipc/src/client/: connection.rs  handle.rs  mod.rs  pending.rs  reconnect.rs
shared/rust-bridge/codex-ipc/src/protocol/: envelope.rs  method.rs  mod.rs  params.rs
shared/rust-bridge/codex-ipc/src/transport/: frame.rs  mod.rs  socket.rs
shared/rust-bridge/codex-mobile-client/: Cargo.toml
shared/rust-bridge/codex-mobile-client/src/: aec.rs  conversation.rs  conversation_uniffi.rs  discovery.rs  discovery_uniffi.rs  hydration.rs  immer_patch.rs  ios_exec.rs  lib.rs  mobile_client_impl.rs  parser.rs  ssh.rs  uniffi_shared.rs  widget_guidelines.rs
shared/rust-bridge/codex-mobile-client/src/ffi/: app_store.rs  client.rs  discovery.rs  errors.rs  logs.rs  mod.rs  parser.rs  rpc_ext.rs  shared.rs  ssh.rs
shared/rust-bridge/codex-mobile-client/src/logging/: mod.rs
shared/rust-bridge/codex-mobile-client/src/rpc/: mod.rs
shared/rust-bridge/codex-mobile-client/src/session/: connection.rs  events.rs  mod.rs  voice_handoff.rs
shared/rust-bridge/codex-mobile-client/src/store/: actions.rs  boundary.rs  mod.rs  reconcile.rs  reducer.rs  snapshot.rs  updates.rs  voice.rs
shared/rust-bridge/codex-mobile-client/src/transport/: adapter.rs  mod.rs
shared/rust-bridge/codex-mobile-client/src/types/: enums.rs  mod.rs  models.rs  server_requests.rs
shared/rust-bridge/codex-tui/: Cargo.toml
shared/rust-bridge/codex-tui/src/: app.rs  export_fixture.rs  input.rs  main.rs  markdown.rs  router.rs  theme.rs
shared/rust-bridge/codex-tui/src/screens/: conversation.rs  discovery.rs  home.rs  mod.rs  sessions.rs  settings.rs
shared/rust-bridge/codex-tui/src/widgets/: approval_bar.rs  composer.rs  message_item.rs  message_list.rs  mod.rs  phone_frame.rs  popup.rs  session_tree.rs  status_bar.rs  user_input_bar.rs
shared/rust-bridge/mobile-log-collector/: Cargo.toml
shared/rust-bridge/mobile-log-collector/src/: main.rs
shared/rust-bridge/mobile-log-shared/: Cargo.toml
shared/rust-bridge/mobile-log-shared/src/: lib.rs
shared/rust-bridge/uniffi-bindgen/: Cargo.toml
tools/scripts/: build-android-rust.sh
(+137 files in other folders)
