[workspace]
members = [
    "codex-bridge",
    "codex-ios-audio",
    "codex-ipc",
    "codex-mobile-client",
    "mobile-log-collector",
    "mobile-log-shared",
    "uniffi-bindgen",
    "codegen",
    "codex-tui",
]
resolver = "3"

[workspace.dependencies]
codex-app-server = { path = "../third_party/codex/codex-rs/app-server" }
codex-app-server-client = { path = "../third_party/codex/codex-rs/app-server-client" }
codex-app-server-protocol = { path = "../third_party/codex/codex-rs/app-server-protocol" }
codex-protocol = { path = "../third_party/codex/codex-rs/protocol" }
codex-utils-cli = { path = "../third_party/codex/codex-rs/utils/cli" }
codex-core = { path = "../third_party/codex/codex-rs/core" }
codex-apply-patch = { path = "../third_party/codex/codex-rs/apply-patch" }
codex-arg0 = { path = "../third_party/codex/codex-rs/arg0" }
codex-feedback = { path = "../third_party/codex/codex-rs/feedback" }
codex-cloud-requirements = { path = "../third_party/codex/codex-rs/cloud-requirements" }
codex-config = { path = "../third_party/codex/codex-rs/config" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tokio-tungstenite = "0.26"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
base64 = "0.22"
russh = "0.58.1"
russh-keys = "0.49.2"
futures = "0.3"
url = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
tracing-subscriber = { version = "0.3", features = ["registry"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
rusqlite = "0.32.1"
tokio-stream = { version = "0.1", features = ["sync"] }
arc-swap = "1.7"

[profile.release]
strip = true
lto = true

[profile.android-dev]
inherits = "release"
lto = false
strip = false
debug = 1
codegen-units = 16

[patch.crates-io]
webrtc-audio-processing-sys = { path = "../third_party/webrtc-audio-processing-sys" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
