[package]
name = "codex-bridge"
version = "0.1.0"
edition = "2024"

[lib]
name = "codex_bridge"
crate-type = ["staticlib", "cdylib"]

[dependencies]
codex-mobile-client = { path = "../codex-mobile-client" }
codex-app-server-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "ios")'.dependencies]
codex-core = { workspace = true }
codex-apply-patch = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
openssl-sys = { version = "0.9", features = ["vendored"] }
