[package]
name = "codex-ipc"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of the Codex Local IPC protocol"

[lib]
name = "codex_ipc"

[dependencies]
codex-app-server-protocol = { workspace = true }
codex-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = { workspace = true }
libc = "0.2"

[[bin]]
name = "codex-ipc-listen"
path = "src/bin/listen.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
