[package]
name = "codex-mobile-client"
version = "0.1.0"
edition = "2024"
description = "Shared mobile client library for Codex iOS and Android apps"

[lib]
name = "codex_mobile_client"
crate-type = ["lib", "cdylib"]

[dependencies]
uniffi = { version = "0.31.0", features = ["tokio"] }
codex-app-server = { workspace = true }
codex-app-server-client = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-ipc = { path = "../codex-ipc" }
mobile-log-shared = { path = "../mobile-log-shared" }
codex-protocol = { workspace = true }
codex-core = { workspace = true }
codex-config = { workspace = true }
codex-cloud-requirements = { workspace = true }
codex-feedback = { workspace = true }
codex-arg0 = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
lru = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true }
tracing-subscriber = { workspace = true }
arc-swap = { workspace = true }

[features]
rpc-trace = []

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[target.'cfg(target_os = "ios")'.dependencies]
codex-ios-audio = { path = "../codex-ios-audio" }

[target.'cfg(target_os = "android")'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
