[package]
name = "codex-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "codex-tui"
path = "src/main.rs"

[[bin]]
name = "export-fixture"
path = "src/export_fixture.rs"

[dependencies]
codex-mobile-client = { path = "../codex-mobile-client" }
codex-app-server-protocol = { path = "../../third_party/codex/codex-rs/app-server-protocol" }
tokio = { workspace = true }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = { version = "0.29", features = ["crossterm"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
unicode-width = "0.2"
textwrap = "0.16"
futures = { workspace = true }
anyhow = "1"
